update gitattributes for lfs, Build file contained

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@
 *.meta -merge eol=lf
 *.controller -merge eol=lf
 *.spriteatlas -merge eol=lf
+D:/ProjectsandStudyTrue/unity/capstone-2023-20 filter=lfs diff=lfs merge=lfs -text
